--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^4.2.0",
+    "chai-things": "^0.2.0",
     "mocha": "^5.2.0"
   }
 }
